[gd_scene load_steps=3 format=3 uid="uid://dulvd8qirkpdg"]

[ext_resource type="Script" uid="uid://bge1phrp7abj0" path="res://Scripts/main_menu.gd" id="1_tt5f1"]
[ext_resource type="Script" uid="uid://cn5itnv324w24" path="res://Scripts/settings_menu.gd" id="2_853f1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_tt5f1")

[node name="TitleMenu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="TitleMenu"]
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="TitleMenu"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="TitleMenu"]
layout_mode = 2
text = "Exit"

[node name="DifficultyMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -77.0
offset_right = 72.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DifficultyMenu"]
layout_mode = 2
text = "Choose a Difficulty
"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="EasyButton" type="Button" parent="DifficultyMenu"]
layout_mode = 2
text = "Easy"
metadata/_edit_lock_ = true

[node name="NormalButton" type="Button" parent="DifficultyMenu"]
layout_mode = 2
text = "Normal"
metadata/_edit_lock_ = true

[node name="HardButton" type="Button" parent="DifficultyMenu"]
layout_mode = 2
text = "Hard"
metadata/_edit_lock_ = true

[node name="ReadyMenu" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -42.0
offset_right = 54.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ReadyMenu"]
layout_mode = 2
text = "Level is Ready
"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="StartingLabel" type="Label" parent="ReadyMenu"]
layout_mode = 2
text = "Starting in 3..."
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="StartButton" type="Button" parent="ReadyMenu"]
layout_mode = 2
text = "Start Now!"
metadata/_edit_lock_ = true

[node name="SettingsMenu" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 280)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -122.5
offset_right = 150.0
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_853f1")

[node name="VolumeOptions" type="Label" parent="SettingsMenu"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 35.0
size_flags_vertical = 0
text = "Volume Options"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="CloseButton" type="Button" parent="SettingsMenu"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"
metadata/_edit_lock_ = true

[node name="MasterGroup" type="Panel" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -105.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="SettingsMenu/MasterGroup"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
offset_left = 10.0
offset_right = 90.0
offset_bottom = 35.0
size_flags_horizontal = 0
text = "Master"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="SettingsMenu/MasterGroup"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_right = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
tick_count = 10
metadata/_edit_lock_ = true

[node name="Volume" type="Label" parent="SettingsMenu/MasterGroup"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 35.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "100"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="MusicGroup" type="Panel" parent="SettingsMenu"]
layout_mode = 2
offset_top = 70.0
offset_right = 300.0
offset_bottom = 105.0
size_flags_vertical = 4
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="SettingsMenu/MusicGroup"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
offset_left = 10.0
offset_right = 90.0
offset_bottom = 35.0
size_flags_horizontal = 0
text = "Music"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="SettingsMenu/MusicGroup"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_right = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
tick_count = 10
metadata/_edit_lock_ = true

[node name="Volume" type="Label" parent="SettingsMenu/MusicGroup"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 35.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "100"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="VoiceGroup" type="Panel" parent="SettingsMenu"]
layout_mode = 2
offset_top = 105.0
offset_right = 300.0
offset_bottom = 140.0
size_flags_vertical = 4
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="SettingsMenu/VoiceGroup"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
offset_left = 10.0
offset_right = 90.0
offset_bottom = 35.0
size_flags_horizontal = 0
text = "Voices"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="SettingsMenu/VoiceGroup"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_right = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
tick_count = 10
metadata/_edit_lock_ = true

[node name="Volume" type="Label" parent="SettingsMenu/VoiceGroup"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 35.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "100"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SFXGroup" type="Panel" parent="SettingsMenu"]
layout_mode = 2
offset_top = 140.0
offset_right = 300.0
offset_bottom = 175.0
size_flags_vertical = 4
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="SettingsMenu/SFXGroup"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
offset_left = 10.0
offset_right = 90.0
offset_bottom = 35.0
size_flags_horizontal = 0
text = "Sound FX"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="SettingsMenu/SFXGroup"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_right = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
tick_count = 10
metadata/_edit_lock_ = true

[node name="Volume" type="Label" parent="SettingsMenu/SFXGroup"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 35.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "100"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="GroupHint" type="Label" parent="SettingsMenu"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 175.0
offset_right = 290.0
offset_bottom = 280.0
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="pressed" from="TitleMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TitleMenu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="TitleMenu/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="DifficultyMenu/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="DifficultyMenu/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="DifficultyMenu/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="ReadyMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="SettingsMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
